Fix 1 px annoying thingy + user menu position on mobile

--- a/files/static/less/navbar.less
+++ b/files/static/less/navbar.less
@@ -37,7 +37,7 @@
 }
 #mainnav .container     { position: relative; }
 #mainnav .glyphicon     { top: 0; }
-#mainnav .dropdown-menu { margin: 0; }
+#mainnav .dropdown-menu { margin: 0 0 0 -1px; }
 
     #mainnav .container > ul {
         list-style: none;
@@ -254,6 +254,10 @@ svg, rect {
 }
 
 @media (max-width: 767px) {
+    #mainnav .dropdown-menu {
+        -webkit-transform: translateX(-50%);
+                transform: translateX(-50%);
+    }
     #mainnav ul.mn-nav {
         display: none;
         position: absolute;
@@ -362,12 +366,15 @@ svg, rect {
     background: rgba(255, 255, 255, 0.1);
 }
 .login-box {
-    /*padding: 15px;*/
     width: 250px;
 
     .navbar-form {
+        width: auto;
+        margin-left: 0;
+        margin-right: 0;
+        padding-top: 0;
+        padding-bottom: 0;
         border: none;
-        box-shadow: none;
         button[type=submit] {
             margin: 10px 0 0 0;
         }
